sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:14: error: ';' expected but 'else' found.
			else {echange(0,1)
                        ^